@@ -1,5 +1,4 @@
 # TODO
 
-* Get path to config from arguments
 * SLL/TLS support
 * Remove extra smtp headers generated by `jordan-wright/email`
